# vsud

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
challenge/: index.html
contact/: index.html
dataset/: index.html
docs/: challenge.md  contact.md  dataset.md
getting-started/: index.html
search/: search_index.json
